# ai-translation-public

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_profile_schema.py  002_translation_logs.py  003_translation_logs_rendered_prompt.py  004_translation_logs_agentic_activities.py  005_tenant_junction_redesign.py  006_schema_cleanup_iso_plumbing.py
demo/: README.md
demo/webpage/: README.md  index.html  load-sdk.html  serve.py
docs/: adrs.md  phase-status.md  stakeholder.md  technical.md
docs/superpowers/plans/: 2026-05-21-15-products-seed.md  2026-05-21-agentic-tracking-and-lang-detection.md  2026-05-21-translation-log-table.md  2026-05-22-frontend-demo-react.md  2026-05-22-frontend-real-api-wiring.md  2026-05-22-schema-cleanup-and-plumbing.md  2026-05-22-tenant-junction-redesign.md
docs/superpowers/specs/: 2026-05-21-15-products-seed-design.md  2026-05-21-agentic-tracking-and-lang-detection-design.md  2026-05-21-translation-log-table-design.md  2026-05-22-frontend-demo-react-design.md  2026-05-22-frontend-real-api-wiring-design.md  2026-05-22-schema-cleanup-and-plumbing-design.md  2026-05-22-tenant-junction-redesign-design.md
eval/: report.py  run.py
eval/datasets/: golden_v1.jsonl
eval/metrics/: base.py  chrf.py  glossary_compliance.py  registry.py
frontend-demo/: .env.local.example  .eslintrc.cjs  .gitignore  README.md  components.json  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
frontend-demo/src/: App.tsx  index.css  main.tsx
frontend-demo/src/components/: SettingsModal.tsx  TopBar.tsx
frontend-demo/src/hooks/: useApiSettings.tsx  useDebouncedValue.test.ts  useDebouncedValue.ts  useElapsedTimer.ts  useTranslationFlow.test.ts  useTranslationFlow.ts  useTypewriter.test.ts  useTypewriter.ts
frontend-demo/src/lib/: format.ts
frontend-demo/src/mocks/: tenants.ts  translations.ts
frontend-demo/src/services/: apiClient.ts  apiSelector.ts  errors.ts  languageDetector.test.ts  languageDetector.ts  mockApi.test.ts  mockApi.ts  pricing.ts  realApi.ts  responseAdapter.ts  types.ts
frontend-demo/tests/components/: SettingsModal.test.tsx
frontend-demo/tests/hooks/: useApiSettings.test.tsx
frontend-demo/tests/services/: apiClient.test.ts  apiSelector.test.ts  errors.test.ts  realApi.test.ts  responseAdapter.test.ts
scripts/: run-demo.ps1  seed_tenant_data.py  test_claude_provider.py  test_e2e_persistence.py
sdk/src/: translator.js
src/api/: dependencies.py  main.py  middleware.py  schemas.py
src/api/routes/: auth.py  health.py  reference.py  translate.py
src/auth/: __init__.py  dependencies.py  hashing.py  jwt.py  middleware.py
src/cache/: base.py  key.py  redis_cache.py
src/company/: __init__.py  repository.py  schemas.py
src/config/: logging.py  settings.py
src/country/: __init__.py  repository.py  schemas.py
src/db/: ids.py  models.py  session.py
src/department/: __init__.py  repository.py  schemas.py
src/iso_languages/: __init__.py  repository.py  schemas.py  seed_data.py
src/pipeline/: compliance.py  errors.py  pipeline.py  schemas.py  stages.py
src/pipeline/agents/: base.py  (+4 more)
src/position/: __init__.py  repository.py  schemas.py
src/providers/: base.py  claude.py  errors.py  factory.py  pricing.py  retrying.py
src/service/: __init__.py  repository.py  schemas.py
src/tenant/: __init__.py  repository.py  schemas.py
src/tenant_profile/: __init__.py  repository.py  resolver.py  schemas.py
src/tenant_prompts/: __init__.py  repository.py
src/translation_logs/: __init__.py  repository.py  sanitize.py  schemas.py
tests/: conftest.py  test_health.py
tests/api/: conftest.py  test_auth_routes.py  test_health.py  test_middleware.py  test_reference_routes.py
tests/auth/: test_hashing.py  test_jwt.py
tests/cache/: test_key.py  test_redis_cache.py
tests/db/: test_ids.py  test_tenant_schema_shape.py
tests/pipeline/: test_jinja_context_builder.py  test_validate_target_language.py
tests/providers/: test_base.py  test_claude.py  test_errors.py  test_pricing.py  test_retrying.py
tests/scripts/: test_seed_distribution.py  test_seed_tenant_data.py
tests/tenant/: test_repository_denormalized.py  test_schemas.py
tests/tenant_profile/: test_repository_denormalized.py  test_schemas.py
tests/translation_logs/: test_sanitize.py
(+23 files in other folders)
